# Model

./: .gitignore  LICENSE.md  example.ipynb  export_for_ecodynelec.ipynb  loadswissgrid.ipynb  predict_2023_demo.ipynb  pyproject.toml  readme.md  recomposed_biomass.csv  requirements.txt
dependencies/: ecodynelec-0.1.0-py3.11.egg
ec_data/: energy-charts_Production_d'électricité_journalière__en_Suisse2020.csv  energy-charts_Production_d'électricité_journalière__en_Suisse2021.csv  energy-charts_Production_d'électricité_journalière__en_Suisse2022.csv  energy-charts_Production_d'électricité_journalière__en_Suisse2023.csv  energy-charts_Production_nette_d'électricité_en_Suisse_2023.csv
ecd_enr_model/export/: enr_prod_2017-2022.csv
src/ecodynelec_enr_model/: data_loading.py  data_model.py  data_utils.py
src/ecodynelec_enr_model.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
